Bug 162988 - A11Y sidebar: false warning about short hyperlink at top of page
Summary: A11Y sidebar: false warning about short hyperlink at top of page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords: implementationError
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2024-09-16 11:19 UTC by Gabor Kelemen (Collabora)
Modified: 2024-09-19 05:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (10.52 KB, application/vnd.oasis.opendocument.text)
2024-09-16 11:19 UTC, Gabor Kelemen (Collabora)
Details
The document and accessibility sidebar after opening (45.60 KB, image/png)
2024-09-16 11:19 UTC, Gabor Kelemen (Collabora)
Details
Warning is gone if the link is not at the top of the second page (24.44 KB, image/png)
2024-09-16 11:20 UTC, Gabor Kelemen (Collabora)
Details
Warning is shown about the first link if that is at the top of the second page (50.63 KB, image/png)
2024-09-16 11:21 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-09-16 11:19:18 UTC
Created attachment 196468 [details]
Example file from Writer

Attached example document contains an empty paragraph and two others with the same hyperlink.
The accessibility sidebar gives a false warning about the second instance of the link because it is at the top of the second page.

1. Open attached document
2. Open the Accessibility sidebar
-> there is a warning "Hyperlink text is too short" about the second hyperlink
3. Go to the first, empty paragraph and press Delete
-> The accessibility warning disappears
4. Undo
5. Press Enter in the first, empty paragraph
-> The accessibility warning appears, but now it is about the first hyperlink

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 47a348bb0fd6dfdd93c1975d216daadc4f6b9b6f
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Seems to have started in 7.5
Comment 1 Gabor Kelemen (Collabora) 2024-09-16 11:19:58 UTC
Created attachment 196469 [details]
The document and accessibility sidebar after opening
Comment 2 Gabor Kelemen (Collabora) 2024-09-16 11:20:27 UTC
Created attachment 196470 [details]
Warning is gone if the link is not at the top of the second page
Comment 3 Gabor Kelemen (Collabora) 2024-09-16 11:21:09 UTC
Created attachment 196471 [details]
Warning is shown about the first link if that is at the top of the second page
Comment 4 Gabor Kelemen (Collabora) 2024-09-16 12:02:47 UTC
Seems to have started with

https://git.libreoffice.org/core/+/de02e5560168060af0b0c9be847af01c4fadec0b

author	offtkp <parisoplop@gmail.com>	Thu Oct 13 19:35:06 2022 +0300
committer	Tomaž Vajngerl <quikee@gmail.com>	Fri Oct 21 08:53:31 2022 +0200

a11y: Add check for short hyperlinks
Comment 5 Commit Notification 2024-09-17 21:41:19 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5b6f384f940d40b8d40675306e103cfdd29bf700

tdf#162988 - A11Y sidebar: fix hyperlinks false warning

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-19 05:26:32 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/61ac2cfa14aa3dd225687b43f429647b8fbb2d97

tdf#162988 - A11Y sidebar: fix hyperlinks false warning

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.